objects/Brick_Seva__c.object
<CustomObject>
    <description>Brick Seva Details for LI Mandir Shilanyas</description>
    <fields>
        <fullName>Brick_Completed__c</fullName>
        <description>Total Shilas brought in</description>
        <inlineHelpText>Total Shilas brought in</inlineHelpText>
        <label>Brick Completed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brick_Target__c</fullName>
        <description>Shila Target</description>
        <inlineHelpText>Please enter Shila Target for the karyakar.</inlineHelpText>
        <label>Brick Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Effective_Date__c</fullName>
        <label>Latest Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Satsang_Network_Coordinator__c</fullName>
        <label>Satsang Network Coordinator</label>
        <picklist>
            <picklistValues>
                <fullName>Urvik Trivedi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone_Leader__c</fullName>
        <description>Karyakar&apos;s zone leader.</description>
        <inlineHelpText>Please select the name of the zone leader.</inlineHelpText>
        <label>Zone Leader</label>
        <picklist>
            <picklistValues>
                <fullName>Pareshbhai Patel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone_Name__c</fullName>
        <label>Zone Name</label>
        <picklist>
            <picklistValues>
                <fullName>Union Turnpike</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floral Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flushing 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flushing 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nassau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suffolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Hills &amp; Fresh Meadows</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Zone Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Zone_Name__c</columns>
        <columns>Brick_Completed__c</columns>
        <columns>Brick_Target__c</columns>
        <columns>Zone_Leader__c</columns>
        <columns>Satsang_Network_Coordinator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LI-SHILA-{MM}-{DD}-{0000}</displayFormat>
        <label>Brick Seva Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zone Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>